--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages (Fuck yeah baby!!!!).</p>
+<p>This is the index.</p>
 </body>
 </html>
