Changed the text to make sure it's updating.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages (Fuck yeah baby!!!!).</p>
+<p>I'm hosted with GitHub Pages (Rosa and Maya are the best).</p>
 <p>This is the index.</p>
 </body>
 </html>
