Update of the site with frist html from codepen

--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages (Rosa and Maya are the best).</p>
-<p>This is the index.</p>
-</body>
-</html>
+  <head>
+<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
+    <style>
+      body {
+        font-family:'Shadows Into Light', cursive;
+        font-size: 16px;
+      }
+    </style>
+  </head>
+  <div class ="pageone" id="p1">
+   <h1>Paul Vulpiani</h1>
+  <h3>A learner developer with an expertise in digital communications, marketing and product development.</h3>
+  </div>
