Update from 1st try from codepen. All code understood

--- a/index.html
+++ b/index.html
@@ -1,15 +1,89 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" >
+
+<head>
+  <meta charset="UTF-8">
+  <title>paulvulpiani.com 001</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+
+  <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.css'>
+
+      <link rel="stylesheet" href="css/style.css">
+
+
+</head>
+
+<body>
+
+  <html>
   <head>
 <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+
     <style>
+
       body {
         font-family:'Shadows Into Light', cursive;
         font-size: 16px;
       }
     </style>
   </head>
+
+<!-- nav-bar -->
+<nav class="navbar navbar-dark bg-dark">
+  <a class="nav-item nav-link" href="#">about</a>
+  <a class="nav-item nav-link" href="#">projects</a>
+  <a class="nav-item nav-link" href="#">news</a>
+  <a class="nav-item nav-link" href="#">experince</a>
+  <a class="nav-item nav-link" href="#">contact</a>
+</div>
+</nav>
+<!-- end-nav-bar -->
+<!-- jumbotron -->
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-2">Paul Vulpiani</h1>
+    <p class="lead">A learner developer with an expertise in digital communications, marketing and product development.</p><!-- social links -->
+  <div class ="btnList text-center">
+  <a class ="btn btn-default" href="https://twitter.com/forestvinnie"><i class="fab fa-twitter-square"></i> Twitter</a>
+  <a class ="btn btn-default" href="https://github.com/forestvinnie"><i class="fab fa-github-square"></i> GitHub</a>
+  <a class ="btn btn-default" href="www.linkedin.com/in/paulvulpiani"><i class="fab fa-linkedin"></i> LinkedIn</a>
+  <a class ="btn btn-default" href="https://www.facebook.com/paul.vulpiani"><i class="fab fa-facebook-square"></i> Facebook</a>                                                                                                             <a class ="btn btn-default" href="https://www.instagram.com/forestvinnie"><i class="fab fa-instagram"></i> instagram</a>
+  </div>
+<!-- end-social-links -->
+  </div>
+</div>
+<!-- end jumbotron -->
+<!-- start page 2 -->
+body, html {
+    height: 100%;
+}
+
+<!-- end page 2 -->
+
+
+
+<!-- social links -->
+  <div class ="btnList text-center">
+  <a class ="btn btn-default" href="https://twitter.com/forestvinnie"><i class="fab fa-twitter-square"></i> Twitter</a>
+  <a class ="btn btn-default" href="https://github.com/forestvinnie"><i class="fab fa-github-square"></i> GitHub</a>
+  <a class ="btn btn-default" href="www.linkedin.com/in/paulvulpiani"><i class="fab fa-linkedin"></i> LinkedIn</a>
+  <a class ="btn btn-default" href="https://www.facebook.com/paul.vulpiani"><i class="fab fa-facebook-square"></i> Facebook</a>                                                                                                             <a class ="btn btn-default" href="https://www.instagram.com/forestvinnie"><i class="fab fa-instagram"></i> instagram</a>
+  </div>
+<!-- end-social-links -->
+
+
+
+
+
   <div class ="pageone" id="p1">
    <h1>Paul Vulpiani</h1>
-  <h3>A learner developer with an expertise in digital communications, marketing and product development.</h3>
+  <h2>A learner developer with an expertise in digital communications, marketing and product development.</h2>
   </div>
+
+
+
+</body>
+
+</html>
