Now with added css as a test

--- a/index.html
+++ b/index.html
@@ -10,7 +10,47 @@
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.css'>
 
       <link rel="stylesheet" href="css/style.css">
+      .jumbotron {
+            background-size: cover;
+            padding-top: 15%;
+            padding-bottom: 10%;
+          }
+      body, html {
+          height: 100%;
+      }
+      .bg {
+          /* The image used */
+          background-image: url("img_girl.jpg");
 
+          /* Full height */
+          height: 100%;
+
+          /* Center and scale the image nicely */
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+      }
+
+      .nav-item{
+         color:white;
+        font-size: 1.5em;
+       }
+
+      .pageone{
+        /*background:url("https://images.unsplash.com/photo-1460602692976-8eab38c11f9d");*/
+        text-align: center;
+        background-color:#e9eff1;
+        padding-bottom:10%;
+      }
+      .pageone h1{
+          color:red;
+      }
+      .btn-default{
+        background-color:white;
+        border-color:black;
+        color:#788692;
+        font-size:1.5em;
+        margin-top:20px;
 
 </head>
 
