--- a/index.html
+++ b/index.html
@@ -3,70 +3,67 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>paulvulpiani.com 001</title>
+  <title>paulvulpiani.com</title>
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.css'>
-  <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
-  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-  <style>
-            body {
-        font-family:'Shadows Into Light', cursive;
-        font-size: 16px;
-      }
-    </style>
-    <link rel="stylesheet" href="style.css">  
+  <html>
+<head>
+ <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
+ <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+ <style>
+   body {
+     font-family: 'Shadows Into Light', cursive;
+     font-size: 16px;
+   }
+ </style>
 </head>
-
-
-<!-- nav-bar -->
-<nav class="navbar navbar-dark bg-dark">
-  <a class="nav-item nav-link" href="#">about</a>
-  <a class="nav-item nav-link" href="#">projects</a>
-  <a class="nav-item nav-link" href="#">news</a>
-  <a class="nav-item nav-link" href="#">experince</a>
-  <a class="nav-item nav-link" href="#">contact</a>
-</div>
+<!-- navbar
+<nav class="navbar navbar-expand-sm bg-dark">
+ <!-- nav bar links
+ <ul class="navbar-nav">
+   <li class="nav-item">
+     <a class="nav-link" href="#">about</a>
+   </li>
+   <li class="nav-item">
+     <a class="nav-link" href="#">news</a>
+   </li>
+   <li class="nav-item">
+     <a class="nav-link" href="#">contact</a>
+   </li>
+ </ul>
 </nav>
-<!-- end-nav-bar -->
+<!-- end navbar -->
+<!-- page one -->
 <!-- jumbotron -->
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-2">Paul Vulpiani</h1>
-    <p class="lead">A learner developer with an expertise in digital communications, marketing and product development.</p><!-- social links -->
-  <div class ="btnList text-center">
-  <a class ="btn btn-default" href="https://twitter.com/forestvinnie"><i class="fab fa-twitter-square"></i> Twitter</a>
-  <a class ="btn btn-default" href="https://github.com/forestvinnie"><i class="fab fa-github-square"></i> GitHub</a>
-  <a class ="btn btn-default" href="www.linkedin.com/in/paulvulpiani"><i class="fab fa-linkedin"></i> LinkedIn</a>
-  <a class ="btn btn-default" href="https://www.facebook.com/paul.vulpiani"><i class="fab fa-facebook-square"></i> Facebook</a>                                                                                                             <a class ="btn btn-default" href="https://www.instagram.com/forestvinnie"><i class="fab fa-instagram"></i> instagram</a>
-  </div>
+<header class="jumbotron jumbotron-fluid" style="margin-bottom:0px">
+<div class ="pageone" id="p1">
+<div class="container">
+<div class="row row-header">
+   <h1 class="display-2">Paul Vulpiani</h1>
+   <p class="lead">A learner developer with an expertise in digital communications, marketing and product development.</p>
+ <!-- social links -->
+     <div class="btnList text-center">
+       <a class="btn btn-default" href="https://twitter.com/forestvinnie"><i class="fab fa-twitter-square"></i> Twitter</a>
+       <a class="btn btn-default" href="https://github.com/forestvinnie"><i class="fab fa-github-square"></i> GitHub</a>
+       <a class="btn btn-default" href="https://www.linkedin.com/in/paulvulpiani"><i class="fab fa-linkedin"></i> LinkedIn</a>
+       <a class="btn btn-default" href="https://www.facebook.com/paul.vulpiani"><i class="fab fa-facebook-square"></i> Facebook</a> <a class="btn btn-default" href="https://www.instagram.com/forestvinnie"><i class="fab fa-instagram"></i> Instagram</a>
+
 <!-- end-social-links -->
-  </div>
+ </header> </div></div></div></div>
+
+
+ <!-- page one end-->
+ <!-- page two-->
+<div class="imagecontainer" style="margin-bottom:0px">
+ <img src="https://images.unsplash.com/photo-1516825295207-81549bdd014c"
+      style="width:100%;">
+<div class="top-left">I am a natural communicator who is confident in communicating <br>
+across all levels from social media to board level.<p> <p>I am an assured public speaker who has presented and participated<br> at a number of international conferences.<p>I have a Successful track record of pragmatic decision making,<br> based on detailed analysis, with an ability to move projects<br> forward at a fast pace.</div>
 </div>
-<!-- end jumbotron -->
-<!-- start page 2 -->
-body, html {
-    height: 100%;
-}
-
-<!-- end page 2 -->
-
-
-
-<!-- social links -->
-  <div class ="btnList text-center">
-  <a class ="btn btn-default" href="https://twitter.com/forestvinnie"><i class="fab fa-twitter-square"></i> Twitter</a>
-  <a class ="btn btn-default" href="https://github.com/forestvinnie"><i class="fab fa-github-square"></i> GitHub</a>
-  <a class ="btn btn-default" href="www.linkedin.com/in/paulvulpiani"><i class="fab fa-linkedin"></i> LinkedIn</a>
-  <a class ="btn btn-default" href="https://www.facebook.com/paul.vulpiani"><i class="fab fa-facebook-square"></i> Facebook</a>                                                                                                             <a class ="btn btn-default" href="https://www.instagram.com/forestvinnie"><i class="fab fa-instagram"></i> instagram</a>
-  </div>
-<!-- end-social-links -->
-
-
-
-
-
-  <div class ="pageone" id="p1">
-   <h1>Paul Vulpiani</h1>
-  <h2>A learner developer with an expertise in digital communications, marketing and product development.</h2>
-  </div>
+  <!-- page two end-->
+<!-- page three-->
+  <!-- page three end-->
+  <!-- footer -->
+<!--<div class="footer bg-dark">
+ <div><p>Website by Paul Vulpiani</p>
+   </div>
+<!-- footer ends -->
